--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uit/glitch-image": "0.0.11",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-powerglitch": "^1.0.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
+    "react-xarrows": "^2.0.2",
     "reactstrap": "^9.1.4",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
